# Timer

./: .cproject  .gitignore  .project  HOWTOBUILD  Makefile.in  configure  configure.ac
src/: Makefile.am  Makefile.in  timer.c
src/public/: timer.h
tests/: Makefile.am  Makefile.in  timer_test.c
